修改jni的策略 现在可以进行图像压缩操作了

--- a/gdcm-codec-native-clib/gdcm-codec-native-clib-macosx/pom.xml
+++ b/gdcm-codec-native-clib/gdcm-codec-native-clib-macosx/pom.xml
@@ -41,7 +41,7 @@
                         <compilerEndOption>-I/usr/local/include/gdcm-2.4</compilerEndOption>
                     </compilerEndOptions>
                     <linkerStartOptions>
-                        <linkerStartOption>-dynamiclib </linkerStartOption>
+                        <linkerStartOption>-dynamiclib -framework CoreFoundation -L/Users/zarra/opt/gdcm/lib </linkerStartOption>
                     </linkerStartOptions>
                     <linkerEndOptions>
                         <linkerEndOption>
