--- a/gdcm-codec/src/test/resources/ImageReaderFactory.properties
+++ b/gdcm-codec/src/test/resources/ImageReaderFactory.properties
@@ -2,7 +2,7 @@
 1.2.840.10008.1.2.4.51:jpeg:com.oritsh.imageIO.codec.GdcmJPEGImageReader:
 1.2.840.10008.1.2.4.57:jpeg:com.oritsh.imageIO.codec.GdcmJPEGImageReader:
 1.2.840.10008.1.2.4.70:jpeg:com.oritsh.imageIO.codec.GdcmJPEGImageReader:
-1.2.840.10008.1.2.4.80:jpeg:com.oritsh.imageIO.codec.GdcmJPEGLSImageReader:ISO2JAI_IF_APP_OR_COM
+1.2.840.10008.1.2.4.80:jpeg:com.oritsh.imageIO.codec.GdcmJPEGLSImageReader:
 1.2.840.10008.1.2.4.81:jpeg:com.oritsh.imageIO.codec.GdcmJPEGLSImageReader:
 1.2.840.10008.1.2.4.90:jpeg2000:com.oritsh.imageIO.codec.GdcmJPEG2KImageReader:
 1.2.840.10008.1.2.4.91:jpeg2000:com.oritsh.imageIO.codec.GdcmJPEG2KImageReader:
