--- a/gdcm-codec/pom.xml
+++ b/gdcm-codec/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>jpegloss-charls</artifactId>
+        <artifactId>gdcm-imageIO</artifactId>
         <groupId>com.oritsh.imageIO</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -12,9 +12,16 @@
     <artifactId>gdcm-codec</artifactId>
 
     <dependencies>
+        <!--<dependency>-->
+        <!--<groupId>com.oritsh.imageIO</groupId>-->
+        <!--<artifactId>gdcm-codec-native-clib-macosx</artifactId>-->
+        <!--<version>1.0-SNAPSHOT</version>-->
+        <!--<type>zip</type>-->
+        <!--<scope>runtime</scope>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.oritsh.imageIO</groupId>
-            <artifactId>gdcm-codec-native-clib-macosx</artifactId>
+            <artifactId>gdcm-codec-native-clib-win64</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>zip</type>
             <scope>runtime</scope>
@@ -89,7 +96,7 @@
                             <!--<outputDirectory>${basedir}/target/classes/lib</outputDirectory>-->
                             <stripVersion>true</stripVersion>
                             <outputDirectory>${project.build.directory}/classes/lib</outputDirectory>
-                            <includeArtifactIds>gdcm-codec-native-clib-macosx</includeArtifactIds>
+                            <includeArtifactIds>gdcm-codec-native-clib-macosx,gdcm-codec-native-clib-win64</includeArtifactIds>
                             <includeGroupIds>${project.groupId}</includeGroupIds>
                             <excludeTransitive>true</excludeTransitive>
                             <excludeTypes>pom</excludeTypes>
