fix pom bug in gdcm-codec-native-clib-macosx

--- a/gdcm-codec-native-clib/gdcm-codec-native-clib-macosx/pom.xml
+++ b/gdcm-codec-native-clib/gdcm-codec-native-clib-macosx/pom.xml
@@ -56,7 +56,7 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <descriptors>
-                        <descriptor>../gdcm-codec-native-clib-win64/assembly.xml</descriptor>
+                        <descriptor>assembly.xml</descriptor>
                     </descriptors>
                 </configuration>
             </plugin>
