--- a/gdcm-codec/pom.xml
+++ b/gdcm-codec/pom.xml
@@ -12,13 +12,13 @@
     <artifactId>gdcm-codec</artifactId>
 
     <dependencies>
-        <!--<dependency>-->
-        <!--<groupId>com.oritsh.imageIO</groupId>-->
-        <!--<artifactId>gdcm-codec-native-clib-macosx</artifactId>-->
-        <!--<version>1.0-SNAPSHOT</version>-->
-        <!--<type>zip</type>-->
-        <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
+        <dependency>
+        <groupId>com.oritsh.imageIO</groupId>
+        <artifactId>gdcm-codec-native-clib-macosx</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <type>zip</type>
+        <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>com.oritsh.imageIO</groupId>
             <artifactId>gdcm-codec-native-clib-win64</artifactId>
@@ -104,7 +104,21 @@
                     </execution>
                 </executions>
             </plugin>
-
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.1</version>
+                <configuration>
+                    <attach>true</attach>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
